<resources>
    <string name="app_name">Anime App</string>
    <string name="hi_welcome_back_you_ve_been_missed">Hi! Welcome back, you\'ve been missed</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">————————— Or sign in with —————————</string>
    <string name="or_sign_up_with">————————— Or sign up with —————————</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password_hint">************</string>
    <string name="create_account">Create Account</string>
    <string name="fill_your_information_below_or_register_with_your_social_account">Fill your information below or register\nwith your social account.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name_example">John Doe</string>
    <string name="name">Name</string>
    <string name="agree_with">Agree with</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="new_password">New Password</string>
    <string name="your_new_password_must_be_diff">Your new password must be different\nfrom previously used passwords.</string>
    <string name="create_new_password">Create New Password</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="don_t_worry_only_you_can_see_your_personal_data_no_one_else_will_be_able_to_see_it">Don\'t worry, only you can see your personal\n data. No one else will be able to see it.</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="_1234567890">+1234567890</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="search">Search</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="pref_acc_key">acc_preferences</string>

</resources>